# discordSend

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  business_code.txt  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
backend/: README.md  app.py  auto_sender.py  bot.py  config.py  database.py  license_manager.py  requirements.txt  weidian_scraper.py
scripts/: export_business_code.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx  LicenseGate.tsx
src/pages/: AccountsPage.tsx  AutoSenderPage.tsx  ShopsPage.tsx
